# HomeKoi-Bevy

./: .editorconfig  .gitattributes  Cargo.toml  README.md
assets/models/: fish.glb
src/: camera.rs  fishes.rs  forces.rs  groups.rs  input.rs  lib.rs  main.rs  random.rs
