[package]
name = "homekoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = "0.14.1"
rand = "0.8.5"
rayon = "1.6.1"

[profile.web]
inherits = "release"
opt-level = "s"
lto = "thin"